--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "David Harvey <david@teamsandtechnology.com> (http://www.teamsandtechnology.com)",
   "name": "mocket",
-  "description": "Mocking library for Node/JS, in the spirit of Mockito",
+  "description": "Mocking library for node.js, in the spirit of Mockito",
   "version": "0.0.1",
   "homepage": "https://github.com/davethehat/mocket",
   "repository": {
@@ -11,9 +11,7 @@
   "scripts": {
     "test": "expresso test/test.js"
   },
-  "engines": {
-    "node": "~v0.4.8"
-  },
-  "dependencies": {},
-  "devDependencies": {}
+  "engine": {
+    "node": ">=v0.4.8"
+  }
 }
