--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "author": "David Harvey <david@teamsandtechnology.com> (http://www.teamsandtechnology.com)",
   "name": "mocket",
   "description": "Mocking library for node.js, in the spirit of Mockito",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "homepage": "https://github.com/davethehat/mocket",
   "repository": {
-    "url": "git@github.com:davethehat/Mocket.gits"
+    "url": "git@github.com:davethehat/Mocket.git"
   },
   "main": "mocket.js",
   "scripts": {
